add second draft

--- a/_posts/2020/2020-07.07-decision-making-in-self-organized-dev-teams.md
+++ b/_posts/2020/2020-07.07-decision-making-in-self-organized-dev-teams.md
@@ -11,7 +11,8 @@ authors: ["Katharina K.", "Katharina W."]
 about_authors: ["kkoessler", "kwendt"]
 ---
 
-Development is a complex thing. Thousands of little pieces come to life, interact with one another, or refuse to do so for reasons we urgently have to figure out. Code is added, removed, arranged, and rearranged. There is a lot of fancy technology involved, much of which a non-tech Scrum Master can hardly understand. However, development is also about small groups of people, looking for the best solution, disagreeing, arguing, convincing, shaking, nodding, and shrugging. At times, agreeing on how to proceed seems to be the most complicated part of it. So, how can developers come up with decisions together, and thrive as a team?
+Development is a complex thing. 
+Thousands of little pieces come to life, interact with one another, or refuse to do so for reasons we urgently have to figure out. Code is added, removed, arranged, and rearranged. There is a lot of fancy technology involved, much of which a non-tech Scrum Master can hardly understand. However, development is also about small groups of people, looking for the best solution, disagreeing, arguing, convincing, shaking, nodding, and shrugging. At times, agreeing on how to proceed seems to be the most complicated part of it. So, how can developers come up with decisions together, and thrive as a team?
 
 
 ## Our remote recruiting process
