add forth draft

--- a/_posts/2020/2020-07.07-decision-making-in-self-organized-dev-teams.md
+++ b/_posts/2020/2020-07.07-decision-making-in-self-organized-dev-teams.md
@@ -11,7 +11,7 @@ authors: ["Manfred"]
 about_authors: ["mzeller"]
 ---
 
-evelopment is a complex thing. 
+Development is a complex thing. 
 Thousands of little pieces come to life, interact with one another, or refuse to do so for reasons we urgently have to figure out.
 Code is added, removed, arranged, and rearranged.
 There is a lot of fancy technology involved, much of which a non-tech Scrum Master can hardly understand.
