add fifth draft and author info

--- a/_posts/2020/2020-07.07-decision-making-in-self-organized-dev-teams.md
+++ b/_posts/2020/2020-07.07-decision-making-in-self-organized-dev-teams.md
@@ -5,7 +5,7 @@ date: 2020-07-07
 header_image: public/remote-recruiting.jpg
 header_position: center
 header_overlay: true
-category: on-the-job
+category: methods-and-tools
 tags: ["decision making", "agile", "scrum", "self organization"]
 authors: ["Manfred"]
 about_authors: ["mzeller"]
