--- a/_posts/2016/2016-09-23-rnd-day-2016.md
+++ b/_posts/2016/2016-09-23-rnd-day-2016.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "ePages R&amp;D Day 2016"
+title: "ePages RnD Day 2016"
 date: 2016-09-23
 header_image: private/roadmap.jpg
 category: events
