--- a/_posts/2015/2015-09-15-rnd-day-2015.md
+++ b/_posts/2015/2015-09-15-rnd-day-2015.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "R&amp;D Day 2015 in the spotlight"
+title: "RnD Day 2015 in the spotlight"
 date: 2015-09-15
 header_image: public/research.jpg
 header_overlay: true
