--- a/_posts/2021/2021-02-04-cypress.md
+++ b/_posts/2021/2021-02-04-cypress.md
@@ -1,92 +1,99 @@
 ---
 layout: post
-title: Cypress - popular and best choice for Quality Assurance
+title: Cypress - our tool of choice for Quality Assurance
 date: 2021-02-04
 header_image: public/quality-assurance.jpg
 header_position: bottom
 header_overlay: true
-category: on-the-job
-tags: ["cypress", "quality assurance", "tool"] 
+category: methods-and-tools
+tags: ["cypress", "quality assurance", "tool"]
 authors: ["Shohidur"]
 about_authors: ["sshaju"]
 ---
-Cypress is a tool for developers or QA engineers to write all types of tests:
+A part of the job as a Quality Assurance Engineer it is to ensure the quality of the software.
+In 2020 we were looking for a Quality Assurance (QA) tool to test our frontend.
+After one of our QA Engineers at ePages made a research on QA tools, we decided to use Cypress for testing the frontend of our ePages user interface.
+Of course, there are also other tools, such as the [Selenium Framework](https://www.selenium.dev/){:target="_blank"} to test for the ePages UI, but Cypress offers more advantages in testing and it has many features that help us in testing.
+I will go into this in more detail in the next paragraphs.
+
+## Cypress - our tool of choice
+
+[Cypress](https://www.cypress.io/){:target="_blank"} is a frontend testing tool that can be used to test anything that runs on browsers.
+Cypress allows it that test automation scripts can be written easily in JavaScript which makes the tool developer-friendly.
+Furthermore, it makes testing easier because one does not need to install multiple tools to run end-to-end tests.
+All the needed tools are packed in one tool.
+
+At ePages, we are using Cypress for all types of tests, such as:
 
 - End-to-end tests
 - Integration tests
 - Unit tests
 
-Cypress can be used to test anything that runs on browser.
-Test automation script can be written easily in JavaScript which makes the tool developer-friendly.
-It makes testing easier because one does not need to install multiple tools to run end-to-end tests.
-All the needed tools are packed in one tool.
+## Advantages and features of Cypress
 
-## Some of the features of Cypress:
+- **Time travel**: Screenshots of every command is available on the test runner. It’s easy to see how the commands get executed.
 
-- Time travel: Screenshots of every command is available on the test runner, it’s easy to see how the commands get executed.
+- **Automatic waiting**: Cypress waits for assertions and commands to be finished before moving on. A developer does not need to add waiting time for completion of a query.
 
-- Automatic waiting: Cypress waits for assertions and commands to be finished before moving on. A developer does not need to add waiting time for completion of a query.
+- **Real time reloads**: When changes are made on code and saved, Cypress reloads automatically and starts running tests.
 
-- Real time reloads: When changes are made on code and saved, Cypress reloads automatically and starts running tests.
+- **Auto scroll**: The automatic scrolling operation ensures that an element is in view before performing any action (e.g. clicking on a button).
 
-- Auto scroll: The automatic scrolling operation ensures that an element is in view before performing any action (for example Clicking on a button).
+- **Debuggability**: The debugging is fast and easy. All the errors and stack traces can be read from browser developer tools which helps to find out why tests are failing.
 
-- Debuggability:  All the errors and stack trace can be read from browser developer tool and that helps to find out why tests are failing. The debugging is fast and easy.
+- **Videos**: Videos of the whole test suite can be viewed when run from Command Line Interface (CLI).
 
-- Videos: Videos of whole test suite is can be viewed when run from CLI.
+- **Cross browser testing**: Web applications can be tested on different browsers in order to test browser dependability issues.
 
-- Cross browser Testing: Web application can be tested on different browsers to test browser dependability issues.
+- **Test runs faster**: Cypress runs test as fast as the browser renders the content.
 
-- Test runs faster: Cypress runs test as fast as the browser render the content.
+## Installing Cypress
 
-## Installing the Cypress
+The [installation](https://docs.cypress.io/img/snippets/installing-cli.b927778a.mp4){:target="_blank"} of Cypress is easy and fast.
+You only need the following commands for the installation:
 
-[Installation](https://docs.cypress.io/img/snippets/installing-cli.b927778a.mp4){:target="_blank"} of Cypress is easy and fast.
-You only need few commands for the installation:
-
-{
+```
     $ cd /your/project/path
     $ npm init
     $ npm install Cypress --save-dev
-}
+```
 
 Cypress can be opened from the project root by the command:
 
-{
-    $ ./node_modules/.bin/Cypress open
-}
+`$ ./node_modules/.bin/Cypress open`
 
+### The test runner
 
-## The Test Runner
-
-Cypress test runner will open after running the above command.
+After running the above command, the Cypress test runner will open.
 
 {% image_custom image="/assets/img/pages/blog/images/cypress-open-project.jpg" width="40" lightbox %}
 
-Test suits are the files that end with .spec.js extension.
-The drop on the top-right corner shows available browser on one’s computer.
+The files that end with .spec.js extesion are the test suits.
+The drop-down menu on the top-right corner shows the available browser on your computer.
 Any browser can be selected to carry out cross-browser tests.
 
-## Retry-ability
+### Retry-ability
 
-One of the core features of Cypress is that failed test can be retried multiple times.
-By default, test does not retry on fail but it can be enabled in configuration to retry test when failed.
+One of the core features of Cypress is that failed tests can be retried multiple times.
+By default, a test does not retry on fail but it can be enabled in configuration to retry the test when failed.
 If a test passes, Cypress will move forward to carry out remaining tests.
 But if the test fails, Cypress will retry the test for another time until it reaches the set limit of retries.
 
-Retry-ability can reduce flaky tests failing entire test runs and thus help us to get reliable and consistent result.
+Retry-ability can reduce flaky tests failing entire test runs and thus help us to get reliable and consistent results.
 
-## TypeScript integration
+### TypeScript integration
 
-Developers who like to use [TypeScript](https://docs.cypress.io/guides/tooling/typescript-support.html#Install-TypeScript){:target="_blank"} for writing Cypress test, it’s possible.
-That’s amazing! There is a requirement to have TypeScript 3.4+ installed in the project to have Typescript support within Cypress.
+It is possible to use [TypeScript](https://docs.cypress.io/guides/tooling/typescript-support.html#Install-TypeScript){:target="_blank"} for writing Cypress tests.
+And that’s amazing!
+There is only one requirement: TypeScript 3.4+ must be installed in the project to have TypeScript support within Cypress.
 
-## Plugins
+### Plugins
 
-Use of [plugins](https://docs.cypress.io/plugins/index.html){:target="_blank"} in cypress provides additional benefit to QA engineers.
-This can be used to change resolved configuration programmatically, expand functionality, add new features and commands.
-Cypress has nice [documentation](https://docs.cypress.io/api/plugins/writing-a-plugin.html#Plugins-API){:target="_blank"} on how to write a plugin.
+The use of [plugins](https://docs.cypress.io/plugins/index.html){:target="_blank"} in Cypress provides additional benefits for QA Engineers.
+This can be used to change resolved configuration programmatically, expand functionality, as well as add new features and commands.
+If you would like to know how to write a plugin, check out the Cypress [API documentation](https://docs.cypress.io/api/plugins/writing-a-plugin.html#Plugins-API){:target="_blank"}.
 
 ## Summary
 
-Cypress is a great choice for testers to carry out front-end testing because it is fast, reliable and full of advantageous features.
+In this blog post I showed the various advantages and features of Cypress, and gave you a quick introduction on how you can install the tool easily.
+To sum it up, Cypress is a great choice for testers to carry out frontend testing because it is fast, reliable, and full of advantageous features.
